tests/NormalTests/paczka1/fuzzy1/10259870.err
Error in line 11: JfkZOqSAO2 S108 67,2
Error in line 2: mov S108 15,7
Error in line 13: mov A886 3,5
Error in line 14: mov A382 78,4
Error in line 28: No2 A382 2,8
Error in line 26: TEYG A886 54,0
Error in line 34: No2 S502 220,38
Error in line 38: mov A382 25,91
Error in line 31: TEYG S502 23,5
